<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalcTwoFragment">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/timeTIL"
        app:layout_constraintStart_toStartOf="@+id/timeTIL"
        app:layout_constraintTop_toBottomOf="@+id/timeTIL" />

    <TextView
        android:id="@+id/drugSpeedTV"
        style="@style/text_info_style"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:text="@string/zero_zero"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBTN"
        style="@style/MyButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/drugSpeedDescriptionTV"
        app:layout_constraintStart_toStartOf="@+id/drugSpeedDescriptionTV"
        app:layout_constraintTop_toBottomOf="@+id/drugSpeedDescriptionTV" />

    <TextView
        android:id="@+id/drugSpeedDescriptionTV"
        style="@style/text_info_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/drug_speed"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateBTN"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/drugSpeedTV" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/volumeOfSolutionTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="МЛ">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/myTILSettings"
            android:hint="@string/volume_of_solution" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/numberOfDropsTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/volumeOfSolutionTIL"
        app:layout_constraintStart_toStartOf="@+id/volumeOfSolutionTIL"
        app:layout_constraintTop_toBottomOf="@+id/volumeOfSolutionTIL"
        app:suffixText="КАП/МЛ">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/myTILSettings"
            android:hint="@string/number_of_drops" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/timeTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/numberOfDropsTIL"
        app:layout_constraintStart_toStartOf="@+id/numberOfDropsTIL"
        app:layout_constraintTop_toBottomOf="@+id/numberOfDropsTIL"
        app:suffixText="МИН">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/myTILSettings"
            android:hint="@string/time" />
    </com.google.android.material.textfield.TextInputLayout>
</androidx.constraintlayout.widget.ConstraintLayout>