<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteBTN"
        style="@style/MyButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete"
        app:layout_constraintEnd_toEndOf="@+id/infoBTN"
        app:layout_constraintStart_toStartOf="@+id/infoBTN"
        app:layout_constraintTop_toBottomOf="@+id/infoBTN" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Добавить пациента" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/infoBTN"
        style="@style/MyButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/deleteAllDataBTN"
        style="@style/MyButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/delete_all_data"
        app:layout_constraintEnd_toEndOf="@+id/deleteBTN"
        app:layout_constraintStart_toStartOf="@+id/deleteBTN"
        app:layout_constraintTop_toBottomOf="@+id/deleteBTN" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/cancelBTN"
        style="@style/MyButtonStyle"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toEndOf="@+id/deleteAllDataBTN"
        app:layout_constraintStart_toStartOf="@+id/deleteAllDataBTN"
        app:layout_constraintTop_toBottomOf="@+id/deleteAllDataBTN" />


</androidx.constraintlayout.widget.ConstraintLayout>