<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CalcOneFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/heightTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:suffixText="см">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/myTILSettings"
            android:hint="@string/height" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/weightTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:suffixText="КГ"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/heightTIL"
        app:layout_constraintStart_toStartOf="@+id/heightTIL"
        app:layout_constraintTop_toBottomOf="@+id/heightTIL">

        <com.google.android.material.textfield.TextInputEditText
            style="@style/myTILSettings"
            android:hint="@string/weight"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/weightTIL"
        app:layout_constraintStart_toStartOf="@+id/weightTIL"
        app:layout_constraintTop_toBottomOf="@+id/weightTIL" />

    <TextView
        android:id="@+id/imtTV"
        style="@style/text_info_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/zero_zero"
        app:layout_constraintEnd_toEndOf="@+id/spinner"
        app:layout_constraintStart_toStartOf="@+id/spinner"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/calculateBTN"
        style="@style/MyButtonStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="64dp"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/imtDescriptionTV"
        app:layout_constraintStart_toStartOf="@+id/imtDescriptionTV"
        app:layout_constraintTop_toBottomOf="@+id/imtDescriptionTV" />

    <TextView
        android:id="@+id/imtDescriptionTV"
        style="@style/text_info_style"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:text="@string/imt"
        android:textSize="14sp"
        app:layout_constraintBottom_toTopOf="@+id/calculateBTN"
        app:layout_constraintEnd_toEndOf="@+id/imtTV"
        app:layout_constraintStart_toStartOf="@+id/imtTV"
        app:layout_constraintTop_toBottomOf="@+id/imtTV" />
</androidx.constraintlayout.widget.ConstraintLayout>